# sources

./: index.json  index.min.json
.github/workflows/: build.yaml
sources/: en.fanfox-v2.aix  en.mangafreak-v2.aix  en.mangahere-v2.aix  en.mangakatana-v3.aix  en.mangapill-v2.aix  en.manhuaus-v1.aix  en.manhwatop-v1.aix  en.tapas-v2.aix  en.webtoons-v2.aix
sources/en.comick/: Cargo.toml
sources/en.comick/res/: source.json
sources/en.comick/src/: lib.rs  models.rs
sources/en.fanfox/: Cargo.toml
sources/en.fanfox/res/: filters.json  source.json
sources/en.fanfox/src/: lib.rs
sources/en.mangafreak/: Cargo.toml
sources/en.mangafreak/res/: filters.json  source.json
sources/en.mangafreak/src/: lib.rs
sources/en.mangahere/: Cargo.toml
sources/en.mangahere/res/: filters.json  source.json
sources/en.mangahere/src/: lib.rs
sources/en.mangakatana/: Cargo.toml
sources/en.mangakatana/res/: filters.json  settings.json  source.json
sources/en.mangakatana/src/: lib.rs
sources/en.mangapill/: Cargo.toml
sources/en.mangapill/res/: filters.json  source.json
sources/en.mangapill/src/: lib.rs
sources/en.manhuaus/: Cargo.toml
sources/en.manhuaus/res/: filters.json  source.json
sources/en.manhuaus/src/: lib.rs
sources/en.manhwatop/: Cargo.toml
sources/en.manhwatop/res/: filters.json  source.json
sources/en.manhwatop/src/: lib.rs
sources/en.tapas/: Cargo.toml
sources/en.tapas/res/: settings.json  source.json
sources/en.tapas/src/: lib.rs  models.rs
sources/en.webtoons/: Cargo.toml
sources/en.webtoons/res/: settings.json  source.json
sources/en.webtoons/src/: lib.rs  models.rs
